k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veterinaria-cliente
  namespace: veterinaria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veterinaria-cliente
  template:
    metadata:
      labels:
        app: veterinaria-cliente
    spec:
      serviceAccountName: veterinaria-sa
      containers:
        - name: veterinaria-cliente
          image: ghcr.io/victoriaarias-i/veterinaria-cliente:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /api/v1/clientes
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/v1/clientes
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
