k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veterinaria-cliente
  namespace: veterinaria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veterinaria-cliente
  template:
    metadata:
      labels:
        app: veterinaria-cliente
    spec:
      containers:
        - name: veterinaria-cliente
          image: ghcr.io/victoriaarias-i/veterinaria-cliente:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/clientes
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: veterinaria-cliente-service
  namespace: veterinaria
spec:
  selector:
    app: veterinaria-cliente
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
