k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: veterinaria-cliente-service
  namespace: veterinaria
spec:
  selector:
    app: veterinaria-cliente
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
