k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veterinaria-ingress
  namespace: veterinaria
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/clientes
            pathType: Prefix
            backend:
              service:
                name: veterinaria-cliente-service
                port:
                  number: 80
